# welleng

./: .buildinfo  .gitignore  ISCWSA_example.ipynb  LICENSE  MANIFEST.in  MANIFSET.in  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  pedal_curve.py  project.toml  py-modindex.html  pyproject.toml  requirements.txt  requirements_lint.txt  requirements_test.txt  search.html  searchindex.js  setup.cfg  setup.py  standard-set-of-wellpaths-for-evaluating-clearance-scenarios-r4-17-may-2017.py  test_interpolate.py  welleng.errors.html  welleng.exchange.html  welleng.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  welleng.doctree  welleng.errors.doctree  welleng.exchange.doctree
.github/: FUNDING.yml
.github/workflows/: build-sphinx.yml  documentation.yaml  documentation.yml  main.yml  publish.yml  python-package.yml
_modules/: index.html
_modules/welleng/: architecture.html  clearance.html  connector.html  error.html  fluid.html  io.html  mesh.html  node.html  survey.html  target.html  torque_drag.html  utils.html  visual.html
_modules/welleng/errors/: extract_iscwsa_codes.html  extract_owsg_codes_generic.html  iscwsa_mwd.html  tool_errors.html
_modules/welleng/exchange/: csv.html  edm.html  wbp.html
_sources/: index.rst.txt  welleng.rst.txt
_static/js/: karma.js
blender/: scene_relative_transform.glb  scene_transform.glb
data/: scene.glb
data/iscwsa/toolgroups/: README.md  toolgroup-owsg-a-rev-5-1-08-oct-2020-produced-23-sep-2022.xlsx  toolgroup-owsg-b-rev-5-1-08-oct-2020-produced-23-sep-2022.xlsx
data/output/: output.xlsx
docs/: buildsite.sh  conf.py  genindex.html  index.html  index.rst  install.md  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  welleng.errors.html  welleng.exchange.html  welleng.html
docs/_modules/: index.html
docs/_modules/welleng/: architecture.html  clearance.html  connector.html  error.html  fluid.html  io.html  mesh.html  node.html  survey.html  target.html  torque_drag.html  utils.html  visual.html
docs/source/: conf.py  modules.rst  welleng.errors.rst  welleng.exchange.rst
docs/source/_templates/: layout.html
examples/: build_a_well_from_sections.py  calibrate_iscwsa_error_example_1.py  connect_cartesian_points.py  connect_two_random_points.py  evaluating_clearance.py  extract_torque_drag.py  gyro_survey_example.py  interpolate_sparse_survey.py  load_edm_volve.py  project_ahead_example.py  simple_example.py  test_json_surveys.py  test_survey.py  using_error_models.py  visualise_clc_edge_cases.py  volve_wells.py
reference/: error-model-example-mwdrev4-iscwsa-1.xlsx  error-model-example-mwdrev5-iscwsa-1.xlsx  error-model-example-mwdrev5-iscwsa-2.xlsx  iscwsa-error-model-geomagnetic-correlation-diagnostics-rev0.xlsx  iscwsa_1.pkl  make_standard_paths.py  standard-set-of-wellpaths-for-evaluating-clearance-scenarios-r4-17-may-2017 (original).xlsm  standard-set-of-wellpaths-for-evaluating-clearance-scenarios-r4-17-may-2017.docx  standard-set-of-wellpaths-for-evaluating-clearance-scenarios-r4-17-may-2017.xlsm  standard-set-of-wellpaths-for-evaluating-clearance-scenarios-r4-17-may-2017.xlsx  toolgroup-owsg-a-rev-5-1-08-oct-2020-produced-22-oct-2020.xlsx
test/: test_clearance_iscwsa.archived  test_clearance_iscwsa.py  test_connector.py  test_fluid.py  test_formula_extractor.py  test_iscwsa_mwd_error.py  test_minimal.py  test_mwdrev4_error.py  test_survey_interpolate.py
test/test_data/: clearance_iscwsa_well_data.json  error_mwdrev4_1_iscwsa_data.json  error_mwdrev4_iscwsa_validation.json  error_mwdrev4_iscwsa_well_data.json  error_mwdrev5_1_iscwsa_data.json  error_mwdrev5_iscwsa_validation_results.xlsx  extract_clearance_model_well_data.py  extract_error_model_validation_data.py  extract_error_model_well_data.py  extract_iscwsa_error_data.py
tests/: AA_test_sum_err.py  ISCWSA_code_ex1.csv  ISCWSA_code_ex3.csv  clean_directories.py  clean_temp_directories.py  covariance_validation_test.py  error-model-example-mwdrev5-1-iscwsa-1.xlsx  error-model-example-mwdrev5-1-iscwsa-3.xlsx  generate_plots.py  sum_of_error_test_1.csv  sum_of_error_test_2.csv  sum_of_error_test_3.csv  test_bug_fixes.py  test_clearance_iscwsa.py  test_connector.py  test_connector_batch.py  test_fluid.py  test_gyro_survey.py  test_iscwsa_ingest.py  test_iscwsa_json_conformance.py  test_iscwsa_mwd_error.py  test_iscwsa_validate.py  test_minimal.py  test_survey_interpolate.py  test_survey_parameters.py  test_utils.py
tests/resources/: corva_welleng_covs_ISCWSA_2.csv  error-model-example-mwdrev5-1-iscwsa-1.xlsx  error-model-example-mwdrev5-1-iscwsa-2.xlsx  error-model-example-mwdrev5-1-iscwsa-3.xlsx
tests/test_data/: clearance_iscwsa_well_data.json  error_mwdrev4_1_iscwsa_data.json  error_mwdrev4_iscwsa_validation_results.xlsx  error_mwdrev5_1_iscwsa_data.json  error_mwdrev5_iscwsa_validation_results.xlsx  test_survey.py  test_survey_parameters.py
unit_tests/: test_clearance_iscwsa.archived  test_fluid.py  test_iscwsa_mwd_error.py
unit_tests/test_data/: error_mwdrev5_1_iscwsa_data.json  extract_clearance_model_well_data.py
utils/: well_collision.py  well_mesh.py  well_scene.py  well_separation.py  well_utils.py
welleng/: __init__.py  architecture.py  clearance.py  connector.py  data.py  error.py  fluid.py  import_data.py  io.py  mesh.py  mesh_clearance.py  node.py  pathfinder.py  survey.py  target.py  torque_drag.py  units.py  utils.py  version.py  visual.py  walk.py  well_data.py  well_utils.py
welleng.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
welleng/error_formula_extractor/: enums.py  formula_extractor.py  formula_utils.py  models.py
welleng/errors/: __init__.py  conformance.py  copsegrove.py  copsegrove_validate.py  error_codes.yaml  extract_error_codes.py  extract_iscwsa_codes.py  extract_owsg_codes_generic.py  interpreter.py  iscwsa_ingest.py  iscwsa_mwd.py  iscwsa_validate.py  singularity_util.py  spike_compare.py  tool_errors.py  tool_index.yaml
welleng/exchange/: __init__.py  csv.py  edm.py  wbp.py  wbp.yaml
welleng/units/: unit_reg.yaml  unit_systems.yaml
(+186 files in other folders)
