[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 40.8", "wheel"]

[tool.ruff]
select = [
    "E", "F",   # the default rules
    "T201",     # disallow print statements
	"B"         # pass bugbear
]
    #"I001",     # isort
    #"D"]        # pydocstyle
ignore = [
    "B905", # `zip()` without an explicit `strict=`
    "B904", # `raise ... from err` seems a bit silly
	"B018"  # useless expression ideally ignore only on `tests`
]
line-length = 90

[tool.ruff.pydocstyle]
convention = "numpy"


[tool.poetry]
name = "welleng"
version = "0.8.3"
description = "Welleng"
authors = ["Jonathan Corcutt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
pint = "^0.23"
pyproj = "^3.6.1"
pyyaml = "^6.0.1"
setuptools = "^69.5.1"
vedo = "^2024.5.1"
vtk = "^9.3.0"
magnetic-field-calculator = "^1.0.2"
networkx = "^3.3"
tabulate = "^0.9.0"
trimesh = "^4.3.2"
utm = "^0.7.0"
python-fcl = "^0.7.0.6"
