[flake8]
select = C, E, W, F, I
max-line-length = 88
extend-ignore = E203, W503
max-complexity = 10
exclude = __init__.py

[coverage:run]
source =
    welleng

[coverage:report]
precision = 2
fail_under = 80
skip_covered = True
show_missing = True

[isort]
profile = black

[metadata]
description-file = README.md