[flake8]
select = C, E, W, F, I
max-line-length = 120
extend-ignore = E203, W503, F821
max-complexity = 15
exclude = __init__.py, welleng/exchange/*

[coverage:run]
source =
    welleng

[coverage:report]
precision = 2
fail_under = 40
skip_covered = True
show_missing = True

[isort]
profile = black

[metadata]
description-file = README.md